# oidc_learning_backend

./: .gitignore  .schemathesis.yml  AGENTS.md  CLAUDE.md  README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
plans/: 03-11-2025.md  05-11-2025.md
src/: main.py
tests/: test_main.py
