[project]
name = "oidc-learning-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "yarl>=1.22.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
    "schemathesis>=4.4.0",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
pythonpath = "."
